bare_err_tree/test_cases/std/fail_src/direct_union.stderr
error: err_tree cannot be annotated on union types
  --> test_cases/std/fail_src/direct_union.rs:17:1
   |
17 | #[err_tree]
   | ^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `err_tree` (in Nightly builds, run with -Z macro-backtrace for more info)
